--- a/pedidos-api/pedidos-api/src/main/resources/application.properties
+++ b/pedidos-api/pedidos-api/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=pedidos-api
 
 #SPRINGDOC OPENAPI
 
-springdoc.swagger-ui.path =/api/docs.html
+springdoc.swagger-ui.path =/api-docs.html
 springdoc.api-docs.path =/api-docs
 springdoc.packagesToScan= br.com.lucasdias.pedidos.api.controller
