--- a/notificacao-service/notificacao-service/src/main/resources/application.properties
+++ b/notificacao-service/notificacao-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=notificacao-service
+
+#RabbitMq Config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=rabbitmq
+spring.rabbitmq.port:5672
+
+#RabbitMq Custom Config
+rabbitmq.exchange.name=pedidos.v1.pedido-criado
+rabbitmq.queue.name=pedidos.v1.pedido-criado.gerar-notificacao
