criando o projeto de processamento e adicionando as dependencias necessarias

--- a/processador/processador/pom.xml
+++ b/processador/processador/pom.xml
@@ -8,10 +8,10 @@
         <version>3.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>br.com.lucasdias.pedidos.notificacao</groupId>
-    <artifactId>notificacao-service</artifactId>
+    <groupId>br.com.lucasdias.pedidos.processador</groupId>
+    <artifactId>processador</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>notificacao-service</name>
+    <name>processador</name>
     <description>Demo project for Spring Boot</description>
     <url/>
     <licenses>
@@ -30,8 +30,10 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
@@ -63,18 +65,13 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -86,9 +83,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
