--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,19 @@ services:
     ports:
       - '1025:1025'
       - '8025:8025'
+  postgres:
+    image: postgres:15.7
+    restart: unless-stopped
+    container_name: postgresql-15.7
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: pedidos-api
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 volumes:
    rabbitmq_data:
    rabbitmq_log:
+   postgres_data:
