Criando os repositories e Criando a classe de configuracao do RabbitMQ

--- a/processador/processador/src/main/resources/application.properties
+++ b/processador/processador/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.datasource.password=postgres
 # JPA/HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#RabbitMq Config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=rabbitmq
+spring.rabbitmq.port:5672
+
+#RabbitMq Custom Config
+rabbitmq.exchange.name=pedidos.v1.pedido-criado
+rabbitmq.queue.name=pedidos.v1.pedido-criado.gerar-processamento
